syntax = "proto3";

package ai.metathings.service.identityd2;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message ListGroupsForEntityRequest {
	OpGroup group = 1;
}

message ListGroupsForEntityResponse {
	repeated Group groups = 1;
}
