syntax = "proto3";

package ai.metathings.service.identityd2;

import "google/protobuf/wrappers.proto";

import "model.proto";

message ListRolesForEntityRequest {
	reserved "description", "policies", "extra";

	google.protobuf.StringValue id = 1;
	OpDomain domain = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue alias = 4;
}

message ListRolesForEntityResponse {
	repeated Policy policies = 1;
}
