syntax = "proto3";

package ai.metathings.service.identityd2;

import "model.proto";

message ShowGroupsResponse {
	repeated Group groups = 1;
}
